[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/Hero/Hero.gd" type="Script" id=1]
[ext_resource path="res://assets/images/rect_tall.png" type="Texture" id=2]
[ext_resource path="res://nodes/attacks/AttackHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/Hero/InputController.tscn" type="PackedScene" id=4]
[ext_resource path="res://nodes/Hero/WarpController.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[node name="Hero" type="KinematicBody2D" groups=[
"enemy_target",
]]
z_index = 11
collision_layer = 2
collision_mask = 1025
script = ExtResource( 1 )
jump_force = 20.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.694118, 1, 1 )
texture = ExtResource( 2 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cam" type="Camera2D" parent="."]
current = true

[node name="AttackHandler" parent="." instance=ExtResource( 3 )]

[node name="InputController" parent="." instance=ExtResource( 4 )]

[node name="WarpController" parent="." instance=ExtResource( 5 )]
unique_name = "hero_controll"
